ajout du rapport de la semaine5/ derniere semaine